[tool.poetry]
name = "sch-task-ui"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.22.0"
dash = "^2.17.1"
pytz = "^2024.1"
sqlalchemy = "^2.0.31"
flet = "^0.23.2"
streamlit = "^1.36.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
